kubernetes/apps/home/hassio/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: hassio-internal-ip
  namespace: home
subsets:
- addresses:
  - ip: 192.168.1.184
  ports:
  - port: 8123
 #}
##endpointslice.yaml

#apiVersion: discovery.k8s.io/v1
#kind: EndpointSlice
#metadata:
#  name: hassio-internal-ip
#  namespace: home
#  labels:
#    kubernetes.io/service-name: hassio-internal-ip # Must be present for EndpointSlice and equal to Service name for automatic mapping - with having it in place, you can change the name of EndpointSlice to something else. The official convention is using Service name as the prefix.
#addressType: IPv4
#ports:
#  - port: 8123
#endpoints:
#  - addresses:
#    - "192.168.1.184" # IP address of your external service that you would like to proxy requests to
