kubernetes/apps/home/hassio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hassio-internal-ip
  namespace: home
spec:
  ports:
  - name: hassio-internal-ip
    port: 8123
    protocol: TCP
    targetPort: 8123
  externalName: 192.168.1.184
  type: ExternalName
