kubernetes/apps/home/hassio/ingress-home.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hassio-home-service-ingress
  namespace: home
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.gitlab.be"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: external
  rules:
  - host: home.gitlab.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hassio-service
            port:
              name: http
