kubernetes/apps/home/hassio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hassio-internal-ip
  namespace: home
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.gitlab.be"
spec:
  ingressClassName: external
  rules:
  - host: hassio.gitlab.be"
    http:
      paths:
      - backend:
          serviceName: hassio-internal-ip
          servicePort: 80
        path: /
